--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 <html>
-  <body href="css/style.css">
+  <body>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
   </body>
