--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>platonovdi</title>
 </head>
 <html>
   <body>
