--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+<html></html>
 <head>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <title>platonovdi</title>
 </head>
-<html>
   <body>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages</p>
