--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   <body>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages</p>
+    
+    <span class="footer">
+      <a href="vk.com/platonovdi" ><img src="python.png" alt="вк"></a>
+    </span>
   </body>
 </html>
