--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <p>I'm hosted with GitHub Pages</p>
     
     <span class="footer">
-      <a href="vk.com/platonovdi" ><img src="python.png" alt="вк"></a>
+      <a href="vk.com/platonovdi">Vk</a>
+      <a href="www.instagram.com/shrimp_destroyer">Instagram</a>
+      <a href="mailto:platonovdi@gmail.com">Email</a>
+      <a href="t.me/fuckin_street_chiller">Telegram</a>
+      <a href="github.com/platonovdi">GitHub</a>
+      <a href="">Steam</a>
     </span>
+    
   </body>
 </html>
