add some stuff to footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <a href="mailto:platonovdi@gmail.com">Email</a>
       <a href="t.me/fuckin_street_chiller">Telegram</a>
       <a href="github.com/platonovdi">GitHub</a>
-      <a href="">Steam</a>
+      <a href="steamcommunity.com/id/platonovdi">Steam</a>
+      <a href="www.tiktok.com/@_mr_crubs">TikTok</a>
     </span>
     
   </body>
