--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <p>I'm hosted with GitHub Pages</p>
     
     <span class="footer">
-      <a href="vk.com/platonovdi">Vk</a>
-      <a href="www.instagram.com/shrimp_destroyer">Instagram</a>
+      <a href="https://vk.com/platonovdi">Vk</a>
+      <a href="https://www.instagram.com/shrimp_destroyer">Instagram</a>
       <a href="mailto:platonovdi@gmail.com">Email</a>
-      <a href="t.me/fuckin_street_chiller">Telegram</a>
-      <a href="github.com/platonovdi">GitHub</a>
-      <a href="steamcommunity.com/id/platonovdi">Steam</a>
-      <a href="www.tiktok.com/@_mr_crubs">TikTok</a>
+      <a href="https://t.me/fuckin_street_chiller">Telegram</a>
+      <a href="https://github.com/platonovdi">GitHub</a>
+      <a href="https://steamcommunity.com/id/platonovdi">Steam</a>
+      <a href="https://www.tiktok.com/@_mr_crubs">TikTok</a>
     </span>
     
   </body>
