--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <p>I'm hosted with GitHub Pages</p>
     
     <span class="footer">
-      <a href="https://vk.com/platonovdi">Vk</a>
-      <a href="https://www.instagram.com/shrimp_destroyer">Instagram</a>
-      <a href="mailto:platonovdi@gmail.com">Email</a>
-      <a href="https://t.me/fuckin_street_chiller">Telegram</a>
-      <a href="https://github.com/platonovdi">GitHub</a>
-      <a href="https://steamcommunity.com/id/platonovdi">Steam</a>
-      <a href="https://www.tiktok.com/@_mr_crubs">TikTok</a>
+      <a href="https://vk.com/platonovdi"><img src="https://img.icons8.com/ios-glyphs/30/000000/vk-circled.png"/></a>
+      <a href="https://www.instagram.com/shrimp_destroyer"><img src="https://img.icons8.com/material-rounded/30/000000/instagram-new.png"/></a>
+      <a href="mailto:platonovdi@gmail.com"><img src="https://img.icons8.com/fluent-systems-filled/30/000000/gmail-login.png"/></a>
+      <a href="https://t.me/fuckin_street_chiller"><img src="https://img.icons8.com/ios-filled/30/000000/telegram-app.png"/></a>
+      <a href="https://github.com/platonovdi"><img src="https://img.icons8.com/ios-filled/30/000000/github.png"/></a>
+      <a href="https://steamcommunity.com/id/platonovdi"><img src="https://img.icons8.com/metro/30/000000/steam.png"/></a>
+      <a href="https://www.tiktok.com/@_mr_crubs"><img src="https://img.icons8.com/ios-filled/30/000000/tiktok.png"/></a>
     </span>
-    
+
   </body>
 </html>
