change site for oib

--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
-<html></html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <title>platonovdi</title>
+  <title>Kill your soul</title>
 </head>
-  <body>
-    <h1>Hello my name is Dmitriy Platonov</h1>
-    <p>I'm hosted with GitHub Pages</p>
-    
-    <span class="footer">
-      <a href="https://vk.com/platonovdi"><img src="https://img.icons8.com/ios-glyphs/30/000000/vk-circled.png"/></a>
-      <a href="https://www.instagram.com/_kill_your_soul"><img src="https://img.icons8.com/material-rounded/30/000000/instagram-new.png"/></a>
-      <a href="mailto:platonovdi@gmail.com"><img src="https://img.icons8.com/fluent-systems-filled/30/000000/gmail-login.png"/></a>
-      <a href="https://t.me/fuckin_street_chiller"><img src="https://img.icons8.com/ios-filled/30/000000/telegram-app.png"/></a>
-      <a href="https://github.com/platonovdi"><img src="https://img.icons8.com/ios-filled/30/000000/github.png"/></a>
-      <a href="https://steamcommunity.com/id/platonovdi"><img src="https://img.icons8.com/metro/30/000000/steam.png"/></a>
-      <a href="https://www.tiktok.com/@_kill_your_soul"><img src="https://img.icons8.com/ios-filled/30/000000/tiktok.png"/></a>
-    </span>
-
-  </body>
+<body>
+  <p>What are you looking for?</p>
+  <!-- zssoib{test} -->
+</body>
 </html>
